--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "firebase": "^7.19.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.6",
+    "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-tab-view": "^2.15.1",
     "react-router-dom": "^5.2.0"
