Adicionada funcionalidade de exibir um alert ao tentar sair

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^7.19.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-awesome-alerts": "^1.4.0",
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
