--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.0",
     "@react-native-firebase/app": "^8.3.1",
     "@react-native-firebase/firestore": "^7.5.3",
     "@react-navigation/native": "^5.7.3",
