--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "^7.5.3",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "date-fns": "^2.16.1",
     "firebase": "^7.19.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
