--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-native": "0.63.2",
     "react-native-awesome-alerts": "^1.4.0",
     "react-native-exit-app": "^1.1.0",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
