--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.0",
     "@react-native-firebase/app": "^8.3.1",
-    "@react-native-firebase/firestore": "^7.5.3",
+    "@react-native-firebase/firestore": "^7.8.7",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "firebase": "^7.19.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
