--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "firebase": "^7.19.1",
+    "geolib": "^3.3.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-awesome-alerts": "^1.4.0",
