Correção de Diversos Bugs e vários testes efeutados - 99% Finalizado

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'QuickClass' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNGoogleSignin', :path => '../node_modules/@react-native-community/google-signin'
+
   target 'QuickClassTests' do
     inherit! :complete
     # Pods for testing
