--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.0",
     "@react-native-firebase/app": "^8.3.1",
+    "@react-native-firebase/auth": "^9.3.2",
     "@react-native-firebase/firestore": "^7.8.7",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
