--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QuickClass",
+  "name": "quickclass",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,7 +15,7 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.0",
-    "@react-native-firebase/app": "^8.3.1",
+    "@react-native-firebase/app": "^8.4.7",
     "@react-native-firebase/auth": "^9.3.2",
     "@react-native-firebase/firestore": "^7.8.7",
     "@react-navigation/native": "^5.7.3",
